add 垃圾收集代码实列